name:                lsys
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lsys#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Marsh
maintainer:          thomas.marsh2@gmail.com
copyright:           2017 Thomas Marsh
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Turtle
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , gloss
                     , split
  default-language:    Haskell2010

executable lsys
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base
                     , lsys
  default-language:    Haskell2010

test-suite lsys-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lsys
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lsys
